# KM

./: .gitignore
Predix/: .env.example  README.md  next.config.js  package-lock.json  package.json  vitest.config.ts
config/: routes.js
docs/: ACTIX_BACKEND_REDESIGN.md  BACKEND_API_BETS_SETTLE.md  BACKEND_DEVELOPMENT_STEPS_ACTIX.md  BACKEND_JWT.md  BACKEND_MARKETSVC&ODDSVC.md  BACKEND_REDIS.md  BACKEND_REQUIREMENTS_BETTING_SETTLE.md  BACKEND_WEBSOCKET.md  BETS-PLACE-CLOSE.md  BET_USE.md  FRONTEND-README.md  FRONTEND_INTERACTION_GUIDE.md  JWT_USE.markdown  MARKET&ODD_USE.md  MARKETS_FIXTURES_INTEGRATION.md  PROJECT-STARTUP.md  REDIS_INTEGRATION.md  SPORTS_LIVE_SIMULATION_REQUIREMENTS.md  (+13 more)
kmarket-backend/: .env.example  .gitignore  BACKEND_API.md  BACKEND_RUST_ARCHITECTURE.md  Cargo.toml  Dockerfile  docker-compose.yml
kmarket-backend/data/: carousel.json
kmarket-backend/docs/: API.md  BACKEND_FRONTEND_MAPPING.md  BETTING_SERVICE.md  DB_TEST_REPORT.md  FRONTEND_HANDOFF_20251106.md  openapi-admins.yaml  undone_20251106.md
kmarket-backend/migrations/: 0001_init.sql  0001_init_types.sql  0001_types.sql  0002_init_schema.sql  0002_users.sql  0003_markets.sql  0003_seed_data.sql  0004_indexes.sql  0004_market_options.sql  0005_fix_sequences.sql  0005_orders.sql  0006_align_frontend.sql  0006_order_claims.sql  0007_chain_events.sql  0007_crud_support.sql  0008_admin_actions.sql  0008_close_fields.sql  0009_admin.sql  0010_seed.sql  0010_user_flags.sql  0011_carousel.sql  0011_live_in_play_seed.sql  0012_market_live_state.sql  0012_sports_fixtures_view.sql  0013_admin_accounts.sql
kmarket-backend/src/: lib.rs  main.rs  state.rs  ws.rs
kmarket-backend/src/cache/: mod.rs  store.rs
kmarket-backend/src/config/: mod.rs
kmarket-backend/src/db/: mod.rs  repo.rs
kmarket-backend/src/errors/: mod.rs
kmarket-backend/src/models/: admin_action.rs  chain_event.rs  dto.rs  market.rs  market_option.rs  mod.rs  order.rs  order_claim.rs  user.rs
kmarket-backend/src/repository/: market_repo.rs  mod.rs  order_repo.rs  user_repo.rs
kmarket-backend/src/routes/: admin.rs  admin_auth.rs  admin_carousel.rs  admin_markets.rs  admin_orders.rs  admin_users.rs  auth.rs  auth_middleware.rs  bets.rs  compat.rs  health.rs  markets.rs  markets_active.rs  markets_live.rs  mod.rs  odds.rs  odds_snapshot.rs  odds_updates.rs  orders.rs  ready.rs  session.rs  sports.rs  users.rs  ws_health.rs  ws_token.rs
kmarket-backend/src/services/: betting.rs  market.rs  mod.rs  odds.rs  settlement.rs  user.rs
kmarket-backend/src/utils/: auth.rs  errors.rs  health.rs  mappers.rs  mock.rs  mod.rs  response.rs
kmarket-backend/tests/: admin_override.rs  admin_users.rs  auth_jwt.rs  basic.rs  bets_settle.rs  betting_service.rs  compat_tests.rs  connection_tests.rs  crud_tests.rs  explain_tests.rs  mock_tests.rs  pool_tests.rs  redis_cache.rs  repo_tests.rs  transaction_tests.rs  ws_hub.rs  ws_routes.rs
kmarket-backend/tests/common/: helpers.rs
(+192 files in other folders)
