[package]
name = "kmarket-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
actix-cors = "0.6"
actix-governor = "0.5"
actix-web-lab = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "bigdecimal", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }
ethers = { version = "2", features = ["abigen", "ws", "rustls"] }
jsonwebtoken = "8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
bcrypt = "0.15"

[dev-dependencies]
actix-rt = "2"
actix-http = "3"
once_cell = "1"
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3